# WeatherAI_CPP

WeatherAI/: CMakeLists.txt  README.txt  main.cpp  scratch.cpp
WeatherAI/src/api/: geminiclient.cpp  geminiclient.h  ollamaclient.cpp  ollamaclient.h
WeatherAI/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
WeatherAI/src/logic/: scriptexecutor.cpp  scriptexecutor.h
WeatherAI/tests/: test_logic.cpp
